tests/golden/fixtures/syntax-symbolic-subscripts-err-garbage-unexpected-close-bracket/expected.err
Error: invalid syntax: unexpected ':'
   ╭─[ tests/golden/fixtures/syntax-symbolic-subscripts-err-garbage-unexpected-close-bracket/input.k65:2:6 ]
   │
 2 │   .a]:byte
   │      ┬  
   │      ╰── inside symbolic-subscript field list
   │ 
   │ Help: each entry inside `var NAME [ ... ]` is `.field` (optional `:byte`/`:word`/`:far`) (optional `[count]`); separate entries with `,` or a newline; field-list entries must lead with a dot
   │ 
   │ Note: Symbolic-subscript field lists declare named offsets inside a var's address window. The grammar is: `[ .field0:type0[count0], .field1:type1, ... ]`. Only `byte`, `word`, and `far` are accepted as the type tag, and explicit typed counts put the type before `[count]`.
───╯

Error: invalid syntax: unexpected ']'
   ╭─[ tests/golden/fixtures/syntax-symbolic-subscripts-err-garbage-unexpected-close-bracket/input.k65:3:1 ]
   │
 3 │ ] = 0x1234
   │ ┬  
   │ ╰── inside symbolic-subscript field list
   │ 
   │ Help: each entry inside `var NAME [ ... ]` is `.field` (optional `:byte`/`:word`/`:far`) (optional `[count]`); separate entries with `,` or a newline; field-list entries must lead with a dot
   │ 
   │ Note: Symbolic-subscript field lists declare named offsets inside a var's address window. The grammar is: `[ .field0:type0[count0], .field1:type1, ... ]`. Only `byte`, `word`, and `far` are accepted as the type tag, and explicit typed counts put the type before `[count]`.
───╯
